complete without text center in responsive

--- a/index.html
+++ b/index.html
@@ -9,20 +9,30 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-
+    <!-- Header Part Start -->
     <header class="bg-[#FFFBF0] py-12 px-5 md:px-32">
         <!-- Navbar Start -->
-        <nav>
-            
+        <nav class="flex justify-between">
+            <div class="w-[350px]">
+                <img src="icons/logo.png" alt="">
+            </div>
+            <div>
+                <ul class="flex gap-12">
+                    <li class="font-roboto font-medium hover:text-lime-500 transition ease-linear duration-500">Home</li>
+                    <li class="font-roboto font-medium hover:text-lime-500 transition ease-linear duration-500">Projects</li>
+                    <li class="font-roboto font-medium hover:text-lime-500 transition ease-linear duration-500">About Us</li>
+                    <li class="font-roboto font-medium hover:text-lime-500 transition ease-linear duration-500">Contacts Us</li>
+                </ul>
+            </div>
         </nav>
         <!-- Navbar End -->
         <!-- Banner Start -->
         <section>
-            <div class="flex flex-col md:flex-row justify-between items-center">
+            <div class="flex flex-col md:flex-row gap-52 items-center">
                 <div class="banner-text space-y-3">
                     <h1 class="text-6xl md:text-8xl text-[#363958] uppercase font-bebas"><span class="text-[#FABE4C]">Be the Penguins</span> <br>of Winter</h1>
                     <p class="text-base w-[350px]">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                    <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                    <button class=" w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white transform hover:scale-125 hover:text-sky-700 transition ease-linear duration-500"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                       </svg>
                       BUY NOW</button>
@@ -34,8 +44,9 @@
         </section>
         <!-- Banner End -->
     </header>
+   <!-- Header Part End -->
 
-
+    <!-- Main Part Start -->
     <main class="max-w-7xl mx-auto">
     <!-- Woman Start -->
     <section class="py-12">
@@ -52,7 +63,7 @@
                     printing and typesetting industry.</p>
                     <div class="flex items-center gap-8">
                         <h3 class="text-4xl font-roboto font-black text-[#FABE4C]">$834</h3>
-                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white transform hover:scale-125 hover:text-sky-700 transition ease-linear duration-500"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                           </svg>
                           BUY NOW</button>
@@ -68,7 +79,7 @@
                     printing and typesetting industry.</p>
                     <div class="flex items-center gap-8">
                         <h3 class="text-4xl font-roboto font-black text-[#FABE4C]">$154</h3>
-                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white transform hover:scale-125 hover:text-sky-700 transition ease-linear duration-500"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                           </svg>
                           BUY NOW</button>
@@ -84,7 +95,7 @@
                     printing and typesetting industry.</p>
                     <div class="flex items-center gap-8">
                         <h3 class="text-4xl font-roboto font-black text-[#FABE4C]">$334</h3>
-                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white transform hover:scale-125 hover:text-sky-700 transition ease-linear duration-500"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                           </svg>
                           BUY NOW</button>
@@ -108,7 +119,7 @@
                     printing and typesetting industry.</p>
                     <div class="flex items-center gap-8">
                         <h3 class="text-4xl font-roboto font-black text-[#FABE4C]">$334</h3>
-                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white transform hover:scale-125 hover:text-sky-700 transition ease-linear duration-500"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                           </svg>
                           BUY NOW</button>
@@ -124,7 +135,7 @@
                     printing and typesetting industry.</p>
                     <div class="flex items-center gap-8">
                         <h3 class="text-4xl font-roboto font-black text-[#FABE4C]">$454</h3>
-                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white transform hover:scale-125 hover:text-sky-700 transition ease-linear duration-500"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                           </svg>
                           BUY NOW</button>
@@ -140,7 +151,7 @@
                     printing and typesetting industry.</p>
                     <div class="flex items-center gap-8">
                         <h3 class="text-4xl font-roboto font-black text-[#FABE4C]">$534</h3>
-                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                        <button class="w-44 h-16 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg font-medium  text-white transform hover:scale-125 hover:text-sky-700 transition ease-linear duration-500"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                           </svg>
                           BUY NOW</button>
@@ -188,11 +199,7 @@
     </section>
     <!-- Service End -->
     </main>
-
-
-    <footer>
-        
-    </footer>
-
+    <!-- Main Part End -->
+    <footer></footer>
 </body>
 </html>
