--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <!-- Service Start -->
     <section class="py-12">
         <div class="ser-content flex flex-col-reverse gap-10 md:flex-row justify-between">
-            <div>
+            <div class="text-center md:text-start">
                 <div class="text-col mb-5 w-[400px] md:w-[450px] py-5 px-5 shadow-lg flex justify-between items-center rounded-xl">
                     <div class="img w-[78px] h-[82px]">
                         <img src="icons/house.png" alt="">
