--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <!-- Man End -->
     <!-- Service Start -->
     <section class="py-12">
-        <div class="ser-content flex flex-col-reverse gap-10 md:flex-row justify-between">
+        <div class="flex flex-col-reverse gap-10 md:flex-row justify-between">
             <div class="text-center md:text-start">
                 <div class="text-col mb-5 w-[400px] md:w-[450px] py-5 px-5 shadow-lg flex justify-between items-center rounded-xl">
                     <div class="img w-[78px] h-[82px]">
@@ -175,20 +175,22 @@
                 </div>
                 <div class="text-col mb-5 w-[400px] md:w-[450px] py-5 px-5 shadow-lg flex justify-between items-center rounded-xl">
                     <div class="img w-[78px] h-[82px]">
-                        <img src="icons/house.png" alt="">
+                        <img src="icons/box.png" alt="">
                     </div>
                     <div class="text">
-                        <h3 class=" text-[#363958] text-2xl font-bold font-roboto">Find the Perfect Fit</h3>
-                        <p class="text-[#3E3E3E] w-[300px] font-roboto">Everybody is different, which is why we offer styles for every body.</p>
+                        <h3 class=" text-[#363958] text-2xl font-bold font-roboto">Free Exchanges</h3>
+                        <p class="text-[#3E3E3E] w-[300px] font-roboto">One of the many reasons you can shop
+                            with peace of mind.</p>
                     </div>
                 </div>
                 <div class="text-col w-[400px] md:w-[450px] py-5 px-5 shadow-lg flex justify-between items-center rounded-xl">
                     <div class="img w-[78px] h-[82px]">
-                        <img src="icons/house.png" alt="">
+                        <img src="icons/question.png" alt="">
                     </div>
                     <div class="text">
-                        <h3 class=" text-[#363958] text-2xl font-bold font-roboto">Find the Perfect Fit</h3>
-                        <p class="text-[#3E3E3E] w-[300px] font-roboto">Everybody is different, which is why we offer styles for every body.</p>
+                        <h3 class=" text-[#363958] text-2xl font-bold font-roboto">Contact Our Seller</h3>
+                        <p class="text-[#3E3E3E] w-[300px] font-roboto">They are here to help you. That's quite 
+                            literally what we pay them for.</p>
                     </div>
                 </div>
             </div>
